src/test/deca/context/invalid/return-invalidTypeWithClass.deca
class A {
}

class B {
    int a(A b){
        return b;
    }
}